# quadHut

./: CMakeLists.txt  README.md  find_quadhuts.c
src/: CMakeLists.txt  find_quadhuts.c  generator.h
